@startuml
hide circle
skinparam classAttributeIconSize 0

class Internship {
    # title : String
    # companyName : String
    + getTitle() : String
    + getCompanyName() : String
    + isRejected() : boolean
    + toString() : String
}

class Interview {
    # internship : Internship
    # dateTime : LocalDateTime
    + Interview(internship, date)
    + setDate(date : LocalDateTime) : void
    + getDate() : LocalDateTime
    + matches(company, title, date) : boolean
    + toString() : String
}

class InternshipList {
    - internships : List<Internship>
    + add(x : Internship) : void
    + getInternships() : List<Internship>
    + getSize() : int
}

class InterviewList {
    - interviews : List<Interview>
    + add(x : Interview) : void
    + get(index : int) : Interview
    + size() : int
    + isValidIndex(index : int) : boolean
}

class AddInterviewCommand {
    - internshipList : InternshipList
    - interviewList : InterviewList
    + execute() : void
}

class SetInterviewDeadlineCommand {
    - interviewList : InterviewList
    + execute() : void
}

class SearchInterviewCommand {
    - interviewList : InterviewList
    + execute() : void
}

class ClearRejectedCommand {
    - internshipList : InternshipList
    + execute() : void
}

Interview --> "1" Internship : references
InterviewList o--> "*" Interview : contains
InternshipList o--> "*" Internship : contains
AddInterviewCommand --> InternshipList : reads from
AddInterviewCommand --> InterviewList : adds to
SetInterviewDeadlineCommand --> InterviewList : modifies
SearchInterviewCommand --> InterviewList : searches
ClearRejectedCommand --> InternshipList : removes from
@enduml
